--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -71,7 +71,7 @@
       }
     ],
     "import/no-extraneous-dependencies": [
-      "error",
+      "off",
       {
         "devDependencies": [
           "**/*.spec.js"
