--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,23 @@ version: "3.7"
 # To execute docker-compose in background: docker-compose up -d
 # To see logs: docker logs rentx -f
 
+# To execute and recreate: docker-compose up --force-recreate
+
 services:
+  database:
+    image: postgres
+    container_name: postgres_rentx
+    restart: always
+    ports:
+      - 5432:5432
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=rentx
+    volumes:
+      - pgdata:/data/postgres
+
+
   app:
     build: .
     container_name: rentx
@@ -12,3 +28,12 @@ services:
       - 3333:3333
     volumes:
       - .:/usr/app
+    links:
+      - database
+    depends_on:
+      - database
+
+
+volumes:
+  pgdata:
+    driver: local
