--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@types/express": "^4.17.11",
+    "aws-sdk": "^2.939.0",
     "bcrypt": "^5.0.1",
     "csv-parse": "^4.15.4",
     "dayjs": "^1.10.5",
