--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/express": "^4.17.11",
     "aws-sdk": "^2.939.0",
     "bcrypt": "^5.0.1",
+    "class-transformer": "^0.4.0",
     "csv-parse": "^4.15.4",
     "dayjs": "^1.10.5",
     "dotenv": "^10.0.0",
