--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,18 +20,24 @@ services:
     volumes:
       - pgdata:/data/postgres
 
-
-  app:
-    build: .
-    container_name: rentx
+  redis:
+    image: redis:alpine
+    container_name: redis_rentx
     ports:
-      - 3333:3333
-    volumes:
-      - .:/usr/app
-    links:
-      - database
-    depends_on:
-      - database
+      - 6379:6379
+
+
+  # app:
+  #   build: .
+  #   container_name: rentx
+  #   ports:
+  #     - 3333:3333
+  #   volumes:
+  #     - .:/usr/app
+  #   links:
+  #     - database
+  #   depends_on:
+  #     - database
 
 
 volumes:
