--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
 # Environment
+# dev | production
+ENV=
 # local | production
 DISK=
 # ethereal | ses
@@ -19,3 +21,6 @@ AWS_REGION=
 REDIS_HOST=
 REDIS_PORT=
 REDIS_PASSWORD=
+
+# Sentry
+SENTRY_DSN=
